--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn btn-primary" name="button" (click)="login()"></button>
+<button type="button" class="btn btn-primary" name="button" (click)="login()">Login With Google</button>
